@@ -1,0 +1,93 @@
+package plugins.mbes.misc;
+
+import java.util.ArrayList;
+
+import plugins.mbes.misc.MoneyAccount;
+import com.mbserver.api.game.Player;
+
+public class MoneyManager{
+	ArrayList<MoneyAccount>bank = new ArrayList<MoneyAccount>();
+	
+	public boolean addAccount(Player p){
+		if(bank.contains(p))
+			return false;
+		bank.add(new MoneyAccount(p));
+		return true;
+	}
+	
+	public boolean resetAccount(Player p){
+		int ind = bank.indexOf(p);
+		
+		if(ind == -1)
+			return false;
+		
+		bank.set(ind,new MoneyAccount(p));
+		return true;
+	}
+	
+	public boolean addMoney(Player p,int amount){
+		int ind = bank.indexOf(p);
+		
+		if(ind == -1)
+			return false;
+		
+		bank.set(ind,bank.get(ind).setAmount(bank.get(ind).getAmount() + amount ));
+		return true;
+	}
+	
+	public int removeMoney(Player p,int amount){
+		int ind = bank.indexOf(p);
+		
+		if(ind == -1)
+			return -1;
+		MoneyAccount temp = bank.get(ind);
+		
+		if(temp.getAmount() - amount < 0)
+			amount = Math.abs(temp.getAmount() - amount);
+		
+		if(temp.getAmount() == 0)
+			amount = 0;
+		
+		bank.set(ind,temp.setAmount(temp.getAmount() - amount));
+		
+		return amount;
+	}
+	
+	public boolean setInfinite(Player p,boolean set){
+		int ind = bank.indexOf(p);
+		
+		if(ind == -1)
+			return false;
+		
+		MoneyAccount temp = bank.get(ind);
+		temp.setInf(set);
+		return true;
+	}
+	
+	public int getMoney(Player p){
+		int ind = bank.indexOf(p);
+		
+		if(ind == -1)
+			return -1;
+		
+		return bank.get(ind).getAmount();
+	}
+	
+	public int giveMoney(Player from, Player to,int amount){
+		int ind = bank.indexOf(from);
+		
+		if(ind == -1)
+			return -1;
+		
+		MoneyAccount frm = bank.get(ind);
+		
+		if(amount > frm.getAmount())
+			amount = frm.getAmount();
+		
+		bank.set(ind,frm.setAmount(frm.getAmount() - amount));
+		
+		addMoney(to, amount);
+		
+		return amount;
+	}
+}
